--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,8 @@ Author: Tyler Rinker
 Maintainer: Tyler Rinker <tyler.rinker@gmail.com>
 Depends:
     R (>= 3.0.0)
+Suggests:
+    qdap
 LazyData: TRUE
 Description: This package is a collection of dictionaries and word lists for
     use with the qdap package.
