--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,2 +1,28 @@
+export(abbreviations)
+export(action.verbs)
+export(adverb)
+export(amplification.words)
+export(BuckleySaltonSWL)
+export(contractions)
+export(deamplification.words)
+export(DICTIONARY)
+export(emoticon)
+export(env.pol)
+export(env.syl)
+export(env.syn)
+export(interjections)
+export(labMT)
+export(NAMES)
+export(NAMES_LIST)
+export(NAMES_SEX)
+export(negation.words)
+export(negative.words)
+export(OnixTxtRetToolkitSWL1)
+export(positive.words)
+export(preposition)
+export(SYNONYM)
+export(Top100Words)
+export(Top200Words)
+export(Top25Words)
 export(view_data)
 S3method(print,data_view)
