--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: qdapDictionaries
 Type: Package
-Title: Dictionaries and word lists for the qdap package.
-Version: 1.0.3
-Date: 2013-07-21
+Title: Dictionaries and Word Lists for the 'Qdap' Package
+Version: 1.0.4
+Date: 2015-04-04
 Author: Tyler Rinker
 Maintainer: Tyler Rinker <tyler.rinker@gmail.com>
 Depends:
     R (>= 3.0.0)
 LazyData: TRUE
-Description: This package is a collection of dictionaries and word lists for
+Description: A collection of dictionaries and word lists for
     use with the qdap package.
 License: GPL-2
 URL: http://trinker.github.com/qdapDictionaries/
