--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: qdapDictionaries
 Type: Package
 Title: Dictionaries and Word Lists for the 'qdap' Package
-Version: 1.0.6
-Date: 2015-04-07
+Version: 1.0.7
+Date: 2015-05-21
 Author: Tyler Rinker
 Maintainer: Tyler Rinker <tyler.rinker@gmail.com>
 Depends: R (>= 3.0.0)
 LazyData: TRUE
-Description: A collection of dictionaries and word lists for use with the 'qdap' package.
+Description: A collection of dictionaries and word lists for use with
+        the 'qdap' package.
 License: GPL-2
 URL: http://trinker.github.com/qdapDictionaries/
 BugReports: http://github.com/trinker/qdapDictionaries/issues
