--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,15 @@ Package: qdapDictionaries
 Type: Package
 Title: Dictionaries and Word Lists for the 'qdap' Package
 Version: 1.0.7
-Date: 2015-10-11
+Date: 2018-03-04
 Author: Tyler Rinker
 Maintainer: Tyler Rinker <tyler.rinker@gmail.com>
 Depends: R (>= 3.0.0)
+Imports: methods, utils
 LazyData: TRUE
 Description: A collection of dictionaries and word lists for use with
         the 'qdap' package.
 License: GPL-2
 URL: http://trinker.github.com/qdapDictionaries/
 BugReports: http://github.com/trinker/qdapDictionaries/issues
+RoxygenNote: 6.0.1
